<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="#202732">

    <!-- Primer component -->
    <ImageView
        android:id="@+id/ImagenUser"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usuario" />

    <!-- Caja Input user -->
    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/teal_700"
        android:ems="10"
        android:hint="@string/usuario"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#26A69A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImagenUser"
        tools:ignore="TextContrastCheck" />

    <!-- Caja Input password -->
    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/teal_700"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#26A69A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="TextContrastCheck" />

    <!-- android:textColor="#26A69A" -->
    <Button
        android:id="@+id/Btn_IniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boton2drawable"
        android:text="@string/iniciar_sesi_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/Btn_ResgistroAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boton2drawable"
        android:text="@string/ResgistroAlumno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_IniciarSesion" />

    <Button
        android:id="@+id/Btn_RegistroDocente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boton2drawable"
        android:text="@string/ReggistroDocente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_ResgistroAlumno" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/boton_social"
        android:contentDescription="@string/CorrigiendoErrores"
        android:onClick="MensajeGoogle"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_RegistroDocente"
        app:srcCompat="@drawable/googlee"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/boton_social"
        android:contentDescription="@string/CorrigiendoErrores"
        android:onClick="MensajeTwetter"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_RegistroDocente"
        app:srcCompat="@drawable/twitter"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boton_social"
        android:contentDescription="@string/CorrigiendoErrores"
        android:onClick="MensajeFacebook"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/Btn_RegistroDocente"
        app:srcCompat="@drawable/facebook" />
</androidx.constraintlayout.widget.ConstraintLayout>